# atelier_management

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
atelier_management/: asgi.py  routing.py  urls.py  wsgi.py
atelier_management/settings/: base.py  development.py  production.py
clients/: admin.py  forms.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py
static/css/: styles.css
tasks/: admin.py  consumers.py  forms.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
templates/: base.html
templates/clients/: client_detail.html  client_list.html
templates/clients/partials/: client_form.html  client_row.html  client_table.html
templates/registration/: login.html
templates/tasks/: task_detail.html  task_list.html  task_row.html  task_table.html
templates/tasks/partials/: task_detail_card.html  task_form.html  task_list_compact.html
templates/users/: dashboard.html
templates/users/partials/: dashboard_metrics.html
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
